# raspi_ros2

./: .gitignore  README.md  docker-compose.nodered.yml  run_hand_test_tmux.sh  run_irrigation.sh  run_irrigation_hivemq.sh
backend-railway/: railway.toml  requirements.txt
backend-railway/app/: config.py  db.py  main.py  models.py  mqtt_worker.py
nodered/: Dockerfile  flows.json
src/hand_ros2_bot/: package.xml  setup.cfg  setup.py
src/hand_ros2_bot/hand_ros2_bot/: decision_node.py  hand_input_node.py  keyboard_node.py  motor_node.py
src/hand_ros2_bot/launch/: hand_bot.launch.py
src/smart_irrigation/: package.xml  setup.cfg  setup.py
src/smart_irrigation/launch/: irrigation_system.launch.py  test_bridge.launch.py
src/smart_irrigation/resource/: smart_irrigation
src/smart_irrigation/smart_irrigation/: config_node.py  decision_node.py  mqtt_bridge_node.py  pump_control_node.py  sensor_node.py  serial_bridge_node.py
src/smart_irrigation/smart_irrigation/config/: defaults.py
src/smart_irrigation/smart_irrigation/utils/: json_utils.py  mqtt_utils.py  serial_utils.py
vercel-dashboard/: index.html  main.js  styles.css
