<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_irrigation</name>
  <version>0.1.0</version>
  <description>Smart irrigation management package with ESP32 serial and MQTT bridge.</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
